added about section

--- a/app/assets/styles/sass/_variables.scss
+++ b/app/assets/styles/sass/_variables.scss
@@ -1,6 +1,6 @@
-$primaryColor: rgb(130, 25, 70);
+$primaryColor: #821946;
 $lightPrimaryColor: rgba($primaryColor, 0.7);
-$accentColor: rgb(180, 120, 75);
+$accentColor: #b4784b;
 $white: rgb(255, 255, 255);
 $textColor: rgba(0, 0, 0, 0.9);
 $headerFont: 'Work Sans',
