--- a/app/assets/styles/sass/styles.scss
+++ b/app/assets/styles/sass/styles.scss
@@ -1,9 +1,13 @@
 // GLOBALS
-@import "variables";
-@import "global";
-@import "fonts";
+@import 'variables';
+@import 'global';
+@import 'fonts';
 // BLOCKS
-@import "wrapper";
-@import "header";
-@import "hero";
-@import "footer";
+@import 'wrapper';
+@import 'header';
+@import 'hero';
+@import 'separator';
+@import 'section';
+@import 'about';
+@import 'products';
+@import 'footer';
