contact us section

--- a/app/assets/styles/sass/_fonts.scss
+++ b/app/assets/styles/sass/_fonts.scss
@@ -21,6 +21,9 @@
     &-24 {
         font-size: 24px;
     }
+    &-32 {
+        font-size: 32px;
+    }
     &-36 {
         font-size: 36px;
     }
