--- a/app/assets/styles/css/styles.css
+++ b/app/assets/styles/css/styles.css
@@ -38,6 +38,9 @@ a {
 .font-24 {
   font-size: 24px; }
 
+.font-32 {
+  font-size: 32px; }
+
 .font-36 {
   font-size: 36px; }
 
@@ -63,7 +66,12 @@ a {
 
 .header {
   background-color: #821946;
-  padding: 15px 25px; }
+  padding: 15px 25px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50; }
   .header__nav {
     padding: 0; }
     .header__nav__tab {
@@ -106,8 +114,8 @@ a {
   left: 0;
   right: 0; }
   .separator path {
-    fill: white;
-    stroke: white; }
+    fill: #821946;
+    stroke: #821946; }
 
 .section {
   padding: 10px 30px; }
@@ -117,16 +125,62 @@ a {
     background-position: center;
     box-shadow: inset 0px 70px 50px -55px rgba(0, 0, 0, 0.7), inset 0px -70px 50px -55px rgba(0, 0, 0, 0.7); }
 
-.about__title {
+.about {
+  background-color: #821946;
+  color: white; }
+  .about__title {
+    position: relative;
+    right: -10%;
+    bottom: 25px;
+    margin: 0;
+    max-width: 400px; }
+
+.products__title {
+  text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  background: #821946;
+  color: white;
+  z-index: 0;
   position: relative;
-  right: -200px;
-  bottom: 25px;
-  margin: 0; }
+  padding-bottom: 10px;
+  bottom: 10px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px; }
 
 .products__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center; }
+  justify-content: center;
+  justify-items: center;
+  grid-gap: 20px; }
+
+.products__item {
+  border: 5px solid black;
+  text-align: center; }
+  .products__item img {
+    width: 100%;
+    object-fit: cover; }
+
+.contact-us__title {
+  text-align: center; }
+
+.contact-us__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px; }
+
+.contact-us__form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5px; }
+  .contact-us__form__message {
+    grid-column: 1 / span 2; }
+  .contact-us__form textarea {
+    resize: none; }
+
+.contact-us__icon {
+  vertical-align: text-top; }
 
 .footer {
   background-color: #821946;
