--- a/app/assets/styles/sass/_about.scss
+++ b/app/assets/styles/sass/_about.scss
@@ -1,11 +1,12 @@
 .about {
+    background-color: $primaryColor;
+    color: white;
     &__title {
         position: relative;
-        right: -200px;
+        right: -10%;
         bottom: 25px;
         margin: 0;
+        max-width: 400px;
     }
-
-    &__content {
-    }
+    &__content {}
 }
