--- a/app/assets/styles/sass/_separator.scss
+++ b/app/assets/styles/sass/_separator.scss
@@ -3,9 +3,8 @@
     bottom: -6px;
     left: 0;
     right: 0;
-
     & path {
-        fill: $white;
-        stroke: $white;
+        fill: $primaryColor;
+        stroke: $primaryColor;
     }
 }
