--- a/app/assets/styles/css/styles.css
+++ b/app/assets/styles/css/styles.css
@@ -193,3 +193,123 @@ a {
   .footer__icon {
     display: inline-block;
     margin: 0 5px; }
+
+/* css for contact-us */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 0;
+}
+
+.input-title {
+  float: left;
+  widows: 20vw;;
+  margin-top: 6px;
+  
+}
+
+.input-place {
+  float: left;
+  width: 30vw;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* To make the form responsive*/
+@media screen and (max-width: 600px) {
+  .input-title, .input-place, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+  }
+}
+
+/* nav-bar css*/
+#navbar {
+  position: fixed; /* Make it stick/fixed */
+  top: 2%; /* Stay on top */
+  width: 100%; /* Full width */
+  transition: top 0.3s;
+}
+#navbar ul {
+  float: right;
+  padding-right: 80px;
+}
+#navbar a:hover {
+  border-bottom: 3px solid #fcc194;
+}
+/* Responsive navbar */
+
+/* some harry specially for you hazem */
+#mySidenav {
+  float: right;
+}
+#mySidenav a {
+  position: absolute;
+  left: -80px;
+  transition: 0.3s;
+  padding: 15px;
+  margin-top: 10%;
+  width: 100px;
+  float: right;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+  left: 0;
+}
+
+#about2 {
+  top: 20px;
+  background-color: #4CAF50;
+}
+
+#blog {
+  top: 80px;
+  background-color: #2196F3;
+}
+
+#projects {
+  top: 140px;
+  background-color: #f44336;
+}
+
+#contact {
+  top: 200px;
+  background-color: #555
+}
