--- a/app/assets/styles/sass/_contact.scss
+++ b/app/assets/styles/sass/_contact.scss
@@ -11,6 +11,10 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 5px;
+        width: 80%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
         &__message {
             grid-column: 1 / span 2;
         }
