--- a/app/assets/styles/sass/_products.scss
+++ b/app/assets/styles/sass/_products.scss
@@ -20,11 +20,27 @@
         grid-gap: 20px;
     }
     &__item {
-        border: 5px solid black;
+        cursor: pointer;
+        border: 5px solid rgba(0, 0, 0, 0.6);
+        border-radius: 20px;
+        overflow: hidden;
         text-align: center;
+        position: relative;
         & img {
             width: 100%;
             object-fit: cover;
+        }
+        &__name {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
+            text-align: center;
+            margin: 0 auto;
+            background-color: rgba($accentColor, 0.8);
+            color: white;
+            padding: 10px 30px;
+            border-radius: 20px;
         }
     }
 }
