--- a/app/assets/styles/sass/styles.scss
+++ b/app/assets/styles/sass/styles.scss
@@ -2,6 +2,8 @@
 @import 'variables';
 @import 'global';
 @import 'fonts';
+// Packages
+@import 'swiper';
 // BLOCKS
 @import 'wrapper';
 @import 'header';
