move contact-us css to sass

--- a/app/assets/styles/sass/_header.scss
+++ b/app/assets/styles/sass/_header.scss
@@ -16,5 +16,19 @@
                 color: $accentColor;
             }
         }
+        /* nav-bar css*/
+        #navbar {
+            position: fixed; /* Make it stick */
+            top: 2%; /* Stay on top */
+            width: 100%; /* Full width */
+            transition: top 0.3s;
+        }
+        #navbar ul {
+            float: right;
+            padding-right: 80px;
+        }
+        #navbar a:hover {
+            border-bottom: 3px solid #fc9494;
+        }
     }
 }
