--- a/app/assets/styles/sass/_contact.scss
+++ b/app/assets/styles/sass/_contact.scss
@@ -25,4 +25,73 @@
     &__icon {
         vertical-align: text-top;
     }
+    input[type=text], select, textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        resize: vertical;
+      }
+      
+    label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    }
+      
+    input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+    
+    &__form-container {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 0;
+      }
+    
+    &__input-title {
+    float: left;
+    widows: 20vw;
+    margin-top: 6px;
+    
+    }
+    
+    &__input-place {
+    float: left;
+    width: 30vw;
+    margin-top: 6px;
+    }
+    
+    /* Clear floats after the columns */
+    &__row:after {
+    content: "";
+    display: table;
+    clear: both;
+    }
+
+    /* To make the form responsive*/
+    @media screen and (max-width: 600px) {
+        .input-title, .input-place, input[type=submit] {
+            width: 100%;
+            margin-top: 0;
+        }
+    }
+
+
 }
+
+
+  
+  
+  
+  
+  
