some changes in contact-us

--- a/app/assets/styles/sass/_contact.scss
+++ b/app/assets/styles/sass/_contact.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 .contact-us {
     &__title {
         text-align: center;
@@ -21,10 +22,10 @@
     &__icon {
         vertical-align: text-top;
     }
-
-    
-    
+    /*
     &__form-container {
+        display: flex;
+        flex-direction: column;
         border-radius: 5px;
         background-color: #f2f2f2;
         padding: 0;
@@ -40,24 +41,97 @@
     }
     
     &__row {
-    display: flex;
+    //display: flex;
     
     }
 
-    /* To make the form responsive*/
+    /* To make the form responsive*/ /*
     @media screen and (max-width: 600px) {
         .input-title, .input-place, input[type=submit] {
             width: 100%;
             margin-top: 0;
         }
-    }
-
+    } */
 
 }
 
 
+  .contact-form{
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    max-width: 550px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 5px;
+    height: 100%;
+
+  }
+   
+  .input-fields{
+    display: flex;
+    flex-direction: column;
+    margin-right: 4%;
+  }
+   
+  .input-fields,
+  .msg{
+    width: 48%;
+  }
+   
+  .input-fields .input,
+  .msg textarea{
+    margin: 10px 0;
+    background: transparent;
+    border: 0px;
+    border-bottom: 2px solid #821946;
+    padding: 10px;
+    color: black;
+    width: 100%;
+    outline: none;
+  }
+   
+  .msg textarea{
+    height: 212px;
+  }
+   
+  ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color:#b4784b;
+  }
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    color:#b4784b;
+  }
+  :-ms-input-placeholder {
+    /* IE 10+ */
+    color:#b4784b;
+  }
+   
+  input[type=submit] {
+    background-color: #821946;
+    color: white;
+    padding: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 auto;
+    text-transform: uppercase;
+    text-align: center; 
+}
   
+  input[type=submit]:hover {
+    background-color: #692945; }
   
-  
-  
-  
+   
+  @media screen and (max-width: 900px){
+    .contact-form{
+      flex-direction: column;
+    }
+    .msg textarea{
+      height: 80px;
+    }
+    .input-fields,
+    .msg{
+      width: 100%;
+    }
+  }
