--- a/app/assets/styles/css/styles.css
+++ b/app/assets/styles/css/styles.css
@@ -216,121 +216,55 @@ a {
     padding: 10px 30px;
     border-radius: 20px; }
 
-.contact-us {
-  /*
-    &__form-container {
-        display: flex;
-        flex-direction: column;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 0;
-      }
-    
-    &__input-title { 
-        margin-top: 6px;
-    }
-    
-    &__input-place {
-        margin-top: 6px;
-        flex: 1;
-    }
-    
-    &__row {
-    //display: flex;
-    
-    }
-
-    /* To make the form responsive*/
-  /*
-    @media screen and (max-width: 600px) {
-        .input-title, .input-place, input[type=submit] {
-            width: 100%;
-            margin-top: 0;
-        }
-    } */ }
-  .contact-us__title {
-    text-align: center; }
-  .contact-us__content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px; }
-  .contact-us__form {
-    width: 80%;
-    padding: 12px;
-    border-radius: 4px; }
-    .contact-us__form__message {
-      grid-column: 1 / span 2; }
-    .contact-us__form textarea {
-      resize: none; }
-  .contact-us__icon {
-    vertical-align: text-top; }
-
-.contact-form {
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-  max-width: 550px;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 5px;
-  height: 100%; }
-
-.input-fields {
-  display: flex;
-  flex-direction: column;
-  margin-right: 4%; }
-
-.input-fields,
-.msg {
-  width: 48%; }
-
-.input-fields .input,
-.msg textarea {
-  margin: 10px 0;
-  background: transparent;
-  border: 0px;
-  border-bottom: 2px solid #821946;
-  padding: 10px;
-  color: black;
-  width: 100%;
-  outline: none; }
-
-.msg textarea {
-  height: 212px; }
-
-::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  color: #b4784b; }
-
-::-moz-placeholder {
-  /* Firefox 19+ */
-  color: #b4784b; }
-
-:-ms-input-placeholder {
-  /* IE 10+ */
-  color: #b4784b; }
-
-input[type=submit] {
-  background-color: #821946;
-  color: white;
-  padding: 15px 25px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 0 auto;
-  text-transform: uppercase;
+.contact-us__title {
   text-align: center; }
 
-input[type=submit]:hover {
-  background-color: #692945; }
+.contact-us__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px; }
 
-@media screen and (max-width: 900px) {
-  .contact-form {
-    flex-direction: column; }
-  .msg textarea {
-    height: 80px; }
-  .input-fields,
-  .msg {
-    width: 100%; } }
+.contact-us__form {
+  width: 80%;
+  padding: 12px;
+  border-radius: 4px; }
+  .contact-us__form__message {
+    grid-column: 1 / span 2; }
+  .contact-us__form textarea {
+    resize: none; }
+
+.contact-us__icon {
+  vertical-align: text-top; }
+
+.contact-us__form-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 0; }
+
+.contact-us__form-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 0; }
+
+.contact-us__input-title {
+  margin-top: 6px; }
+
+.contact-us__input-place {
+  margin-top: 6px;
+  flex: 1; }
+
+/* To make the form responsive*/
+@media screen and (max-width: 600px) {
+  .input-title, .input-place, input[type=submit] {
+    width: 100%;
+    margin-top: 0; }
+  .contact-us__content {
+    display: flex;
+    flex-direction: column; } }
 
 input[type=text], select, textarea {
   width: 100%;
@@ -338,6 +272,45 @@ input[type=text], select, textarea {
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical; }
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block; }
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto; }
+
+input[type=submit]:hover {
+  background-color: #45a049; }
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical; }
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block; }
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto; }
+
+input[type=submit]:hover {
+  background-color: #45a049; }
 
 .footer {
   background-color: #3d0014;
