--- a/app/assets/styles/sass/_contact.scss
+++ b/app/assets/styles/sass/_contact.scss
@@ -22,15 +22,23 @@
     &__icon {
         vertical-align: text-top;
     }
-    /*
-    &__form-container {
-        display: flex;
-        flex-direction: column;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 0;
-      }
     
+    &__form-container {
+      display: flex;
+      flex-direction: column;
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 0;
+    }
+
+    &__form-container {
+      display: flex;
+      flex-direction: column;
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 0;
+    }
+  
     &__input-title { 
         margin-top: 6px;
     }
@@ -39,99 +47,39 @@
         margin-top: 6px;
         flex: 1;
     }
-    
-    &__row {
-    //display: flex;
-    
-    }
 
-    /* To make the form responsive*/ /*
+}
+ /* To make the form responsive*/ 
     @media screen and (max-width: 600px) {
         .input-title, .input-place, input[type=submit] {
             width: 100%;
             margin-top: 0;
         }
-    } */
+        .contact-us__content {
+          display: flex;
+          flex-direction: column;
+        }
+    } 
 
-}
-
-
-  .contact-form{
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    max-width: 550px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 5px;
-    height: 100%;
-
-  }
-   
-  .input-fields{
-    display: flex;
-    flex-direction: column;
-    margin-right: 4%;
-  }
-   
-  .input-fields,
-  .msg{
-    width: 48%;
-  }
-   
-  .input-fields .input,
-  .msg textarea{
-    margin: 10px 0;
-    background: transparent;
-    border: 0px;
-    border-bottom: 2px solid #821946;
-    padding: 10px;
-    color: black;
-    width: 100%;
-    outline: none;
-  }
-   
-  .msg textarea{
-    height: 212px;
-  }
-   
-  ::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color:#b4784b;
-  }
-  ::-moz-placeholder {
-    /* Firefox 19+ */
-    color:#b4784b;
-  }
-  :-ms-input-placeholder {
-    /* IE 10+ */
-    color:#b4784b;
-  }
-   
-  input[type=submit] {
-    background-color: #821946;
-    color: white;
-    padding: 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0 auto;
-    text-transform: uppercase;
-    text-align: center; 
-}
-  
-  input[type=submit]:hover {
-    background-color: #692945; }
-  
-   
-  @media screen and (max-width: 900px){
-    .contact-form{
-      flex-direction: column;
-    }
-    .msg textarea{
-      height: 80px;
-    }
-    .input-fields,
-    .msg{
+    input[type=text], select, textarea {
       width: 100%;
-    }
-  }
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical; }
+    
+    label {
+      padding: 12px 12px 12px 0;
+      display: inline-block; }
+    
+    input[type=submit] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin: 0 auto; }
+    
+    input[type=submit]:hover {
+      background-color: #45a049; }
