--- a/app/assets/styles/css/styles.css
+++ b/app/assets/styles/css/styles.css
@@ -225,7 +225,6 @@ a {
   grid-gap: 20px; }
 
 .contact-us__form {
-  width: 80%;
   padding: 12px;
   border-radius: 4px; }
   .contact-us__form__message {
@@ -257,6 +256,12 @@ a {
   margin-top: 6px;
   flex: 1; }
 
+.contact-us__row {
+  padding: 0 20px; }
+  .contact-us__row--btn {
+    padding: 0;
+    margin-top: 10px; }
+
 /* To make the form responsive*/
 @media screen and (max-width: 600px) {
   .input-title, .input-place, input[type=submit] {
@@ -278,39 +283,20 @@ label {
   display: inline-block; }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #821946;
   color: white;
   padding: 12px 25px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 100%; }
 
 input[type=submit]:hover {
-  background-color: #45a049; }
+  background-color: #6d153a; }
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical; }
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block; }
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 25px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin: 0 auto; }
-
-input[type=submit]:hover {
-  background-color: #45a049; }
+input:focus, textarea:focus {
+  outline-color: rgba(130, 25, 70, 0.7); }
 
 .footer {
   background-color: #3d0014;
