--- a/app/assets/styles/sass/_input.scss
+++ b/app/assets/styles/sass/_input.scss
@@ -3,24 +3,28 @@ input[type=text], select, textarea {
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    resize: vertical;
+    resize: vertical; }
+  
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block; }
+  
+  input[type=submit] {
+    background-color: $primaryColor;
+    color: white;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 auto; 
+    width: 100%;
   }
   
-label {
-padding: 12px 12px 12px 0;
-display: inline-block;
-}
-  
-input[type=submit] {
-background-color: #4CAF50;
-color: white;
-padding: 12px 25px;
-border: none;
-border-radius: 4px;
-cursor: pointer;
-margin: 0 auto
-}
+  input[type=submit]:hover {
+        background-color: darken($primaryColor, 5); 
+  }
 
-input[type=submit]:hover {
-    background-color: #45a049;
-}
+  input:focus, textarea:focus {
+        outline-color: $lightPrimaryColor; 
+  }
+
