--- a/app/assets/styles/sass/_footer.scss
+++ b/app/assets/styles/sass/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-    background-color:#3d0014 ;
+    background-color: $primaryColor;
     padding: 15px 25px;
     margin-left: -15px;
     &__caption {
-        color: #747474;
+        color: $white;
         font-size: 12px;
     }
     &__icons {
@@ -14,6 +14,3 @@
         margin: 0 5px;
     }
 }
-   
-      
-         
