--- a/app/assets/styles/sass/_products.scss
+++ b/app/assets/styles/sass/_products.scss
@@ -21,11 +21,20 @@
     }
     &__item {
         cursor: pointer;
-        border: 5px solid rgba(0, 0, 0, 0.6);
+        border: 5px solid rgba($accentColor, 0.7);
         border-radius: 20px;
         overflow: hidden;
         text-align: center;
         position: relative;
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+            border: 5px solid $lightPrimaryColor;
+
+            .products__item__name {
+                background-color: $lightPrimaryColor;
+            }
+        }
         & img {
             width: 100%;
             object-fit: cover;
@@ -37,10 +46,11 @@
             position: absolute;
             text-align: center;
             margin: 0 auto;
-            background-color: rgba($accentColor, 0.8);
+            background-color: rgba($accentColor, 0.5);
             color: white;
             padding: 10px 30px;
             border-radius: 20px;
+            transition: all 0.2s ease-in-out;
         }
     }
 }
